--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -7,14 +7,13 @@
     tools:context=".IniciarSesion">
 
     <EditText
-        android:id="@+id/ingrediente"
+        android:id="@+id/nombreUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_email"
-        android:inputType="textEmailAddress"
+        android:hint="@string/nomUsuario"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,40 +27,38 @@
         android:text="¿No tiene una cuenta? Registrate aquí!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login" />
+        app:layout_constraintTop_toBottomOf="@+id/loginBoton" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/loginBoton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
-        android:enabled="false"
-        android:text="@string/action_sign_in"
+        android:layout_marginBottom="196dp"
+        android:enabled="true"
+        android:text="Iniciar sesión"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintTop_toBottomOf="@+id/contrasenaRegistro"
         app:layout_constraintVertical_bias="0.321" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/contrasena"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_password"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
+        android:hint="@string/contrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ingrediente" />
+        app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />
 
     <ImageView
         android:id="@+id/imagenInicioSesion"
