--- a/app/src/main/res/layout/activity_anadir_receta.xml
+++ b/app/src/main/res/layout/activity_anadir_receta.xml
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imagenNuevaReceta" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/pasosSeguir"
         android:layout_width="370dp"
         android:layout_height="370dp"
         android:ems="10"
