--- a/app/src/main/res/layout/dialog_add_ingrediente.xml
+++ b/app/src/main/res/layout/dialog_add_ingrediente.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/nombreUsuario"
+        android:id="@+id/nombreIngrediente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
@@ -13,5 +13,15 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="Ingrediente" />
+
+    <Button
+        android:id="@+id/anadirIngrediente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="Añadir"/>
 
 </LinearLayout>
