--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,4 +14,8 @@
         <item name="android:fontFamily">sans-serif-smallcaps</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="ImageBorder">
+        <item name="android:width">5dp</item>
+        <item name="android:background">#000000</item>
+    </style>
 </resources>
