--- a/app/src/main/res/layout/activity_anadir_receta.xml
+++ b/app/src/main/res/layout/activity_anadir_receta.xml
@@ -41,7 +41,7 @@
         android:id="@+id/nombreNuevaReceta"
         android:layout_width="209dp"
         android:layout_height="39dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="44dp"
         android:hint="Nombre de receta"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,11 +77,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="Añadir ingrediente"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Añadir ingredientes"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.72"
+        app:layout_constraintHorizontal_bias="0.607"
         app:layout_constraintStart_toEndOf="@+id/imagenNuevaReceta"
         app:layout_constraintTop_toBottomOf="@+id/nombreNuevaReceta" />
 
