Inicio de sesión y registro completamente funcional y acabado

--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -26,7 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:text="¿No tiene una cuenta? Registrate aquí!"
+        android:clickable="true"
+        android:text="¿No tiene una cuenta? Regístrate aquí!"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
