--- a/app/src/main/res/layout/activity_usuario_perfil.xml
+++ b/app/src/main/res/layout/activity_usuario_perfil.xml
@@ -46,7 +46,7 @@
         android:text="Mis recetas:"
         app:layout_constraintBottom_toTopOf="@+id/usuarioRecetas"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/iconoUsuario" />
 
     <Button
         android:id="@+id/botonNewReceta"
@@ -56,7 +56,7 @@
         android:text="Añadir receta"
         app:layout_constraintBottom_toTopOf="@+id/usuarioRecetas"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/iconoUsuario" />
 
     <TextView
         android:id="@+id/nombreUsuarioText"
@@ -64,7 +64,7 @@
         android:layout_height="35dp"
         app:layout_constraintBottom_toTopOf="@+id/botonNewReceta"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/iconoUsuario"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
@@ -79,7 +79,7 @@
     </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iconoUsuario"
         android:layout_width="132dp"
         android:layout_height="151dp"
         android:layout_marginTop="16dp"
