--- a/app/src/main/res/layout/activity_anadir_receta.xml
+++ b/app/src/main/res/layout/activity_anadir_receta.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo1"
     tools:context=".AnadirReceta">
 
     <EditText
@@ -33,6 +34,7 @@
 
     <Button
         android:id="@+id/buttonVolverAdd"
+        style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -55,6 +57,7 @@
 
     <Button
         android:id="@+id/botonAddReceta"
+        style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
@@ -77,6 +80,7 @@
 
     <Button
         android:id="@+id/botonAddIngrediente"
+        style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
