--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -18,4 +18,9 @@
         <item name="android:width">5dp</item>
         <item name="android:background">#000000</item>
     </style>
+    <style name="Texto">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:fontFamily">serif-monospace</item>
+    </style>
 </resources>
