--- a/app/src/main/res/layout/dialogo_galeria_camara.xml
+++ b/app/src/main/res/layout/dialogo_galeria_camara.xml
@@ -9,34 +9,30 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="356dp"
         android:layout_height="230dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@drawable/dialog">
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/Titulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="140dp"
+            android:text="¿De dónde quieres obtener la imágen?"
+            app:layout_constraintBottom_toTopOf="@+id/buttonVolver"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/buttonVolver"
+            style="@style/Botones"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
             android:text="Volver"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/imagenGaleria"
-            android:layout_width="195dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:background="@drawable/galeria"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.111"
-            app:layout_constraintStart_toEndOf="@+id/imagenCamara"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/galeria" />
 
         <ImageView
             android:id="@+id/imagenCamara"
@@ -44,12 +40,27 @@
             android:layout_height="108dp"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="28dp"
-            android:layout_weight="1"
+            android:layout_marginTop="52dp"
             android:background="@drawable/camara"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/camara" />
+
+        <ImageView
+            android:id="@+id/imagenGaleria"
+            android:layout_width="195dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/galeria"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imagenCamara"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/galeria" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
