--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,16 +2,16 @@
 <resources>
     <style name="Botones">
         <item name="android:backgroundTint">#2C3E50</item>
-        <item name="android:fontFamily">sans-serif-smallcaps</item>
+        <item name="android:fontFamily">casual</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
     <style name="BotonBuscar">
         <item name="android:backgroundTint">#505860</item>
-        <item name="android:fontFamily">sans-serif-smallcaps</item>
+        <item name="android:fontFamily">casual</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
     <style name="EditText">
-        <item name="android:fontFamily">sans-serif-smallcaps</item>
+        <item name="android:fontFamily">casual</item>
         <item name="android:textColor">#000000</item>
     </style>
     <style name="ImageBorder">
@@ -21,6 +21,13 @@
     <style name="Texto">
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">18dp</item>
-        <item name="android:fontFamily">serif-monospace</item>
+        <item name="android:fontFamily">casual</item>
+    </style>
+    <style name="Titulo">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:fontFamily">casual</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
     </style>
 </resources>
